#9 downgraded to Junit4 due to version clashes and implemented TimerService Tests using mockito